# c-library-management

./: .clangd  .env-example  .gitignore  CMakeLists.txt  README.md  TODO.md  make.sh  note.txt  run.sh
includes/: database.h  env_file.h  terminal.h  utils.h
src/: database.c  env_file.c  main.c  terminal.c  utils.c
